hphp/hack/test/typecheck/reactive/mutable_as_hint3.php.exp
File "mutable_as_hint3.php", line 18, characters 5-28:
Invalid argument (Typing[4263])
File "mutable_as_hint3.php", line 10, characters 33-33:
Incompatible mutabilities:
File "mutable_as_hint3.php", line 10, characters 33-33:
This parameter is mutable
File "mutable_as_hint3.php", line 18, characters 16-17:
This parameter is immutable
